# zhenxun_bot_plugins_index

./: .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  homonumber.py  plugins.json  zhenxun_plugins.json
Arcaea/: README.md  __init__.py  api.py  arcsong.db  draw.py  sql.py  test.py
ELF_RSS/: __init__.py  readme.md
abstract/: README.md  __init__.py  data.py  emoji.py
asoulcnki/: README.md  __init__.py  data_source.py
avatar/: README.md  __init__.py  data_source.py
aya-day/: __init__.py
caiyunai/: README.md  __init__.py  config.py  data_source.py
cp/: README.md  __init__.py  content.json
crazy_thursday/: README.md  __init__.py
ddcheck/: README.md  __init__.py  config.py  data_source.py
emojimix/: README.md  __init__.py  config.py  data_source.py
essay/: __init__.py  data_source.py
genshinkfc/: README.md  __init__.py
github/: __init__.py  config.py  data_source.py
github_sub/: README.md  __init__.py  data_source.py  model.py
giyf/: README.md  __init__.py  config.py  config_manager.py  data_source.py
hanayori/: __init__.py  data_source.py  model.py
indices/: Function-Plugin.md  old-Plugin.md
intercept_withdraw/: Readme.md  __init__.py
leetcode/: __init__.py  data_source.py
lifeRestart/: README.md  __init__.py
logo/: README.md  __init__.py  data_source.py
memes/: README.md  __init__.py  download.py  functions.py  gif_subtitle_meme.py  models.py  normal_meme.py  utils.py
mockingbird/: README.md  __init__.py  config.py  data_source.py  download.py  requirements.txt
nonebot-plugin-answersbook-master/: LICENSE  README.md  pyproject.toml
nonebot-plugin-answersbook-master/.github/workflows/: pypi-publish.yml
nonebot-plugin-answersbook-master/nonebot_plugin_answersbook/: __init__.py  answersbook.json
nonebot-plugin-color-main/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
nonebot-plugin-color-main/.github/workflows/: build.yml  publish-test.yml  publish.yml
nonebot-plugin-color-main/nonebot_plugin_color/: __init__.py  data_source.py
nonebot-plugin-simplemusic-main/: LICENSE  README.md  pyproject.toml
nonebot-plugin-simplemusic-main/nonebot_plugin_simplemusic/: __init__.py  data_source.py
nonebot_plugin_atri/: README.md  __init__.py
nonebot_plugin_boardgame/: __init__.py  game.py  go.py  gomoku.py  othello.py  svg.py
nonebot_plugin_charpic/: __init__.py  data_source.py
nonebot_plugin_emojimix/: README.md  __init__.py  data_source.py  emoji.py
nonebot_plugin_everyday_en/: __init__.py  config.py
nonebot_plugin_r6s/: README.md  __init__.py  image.py  net.py  player.py  pyproject.toml  r6s_data.py  r6s_ground.py  r6s_stats.py
nonebot_plugin_r6s/fonts/: SIL_Open_Font_License_1.1.txt
random_cat_gif/: README.md  (+1 more)
(+111 files in other folders)
