[tool.poetry]
name = "nonebot-plugin-color"
version = "0.1.1"
description = "A specified color image generator for Nonebot2"
authors = ["monsterxcn <monsterxcn@gmail.com>"]
documentation = "https://github.com/monsterxcn/nonebot-plugin-color#readme"
license = "MIT"
homepage = "https://github.com/monsterxcn/nonebot-plugin-color"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "color"]

[tool.poetry.dependencies]
python = ">=3.7.3,<4.0"
nonebot2 = ">=2.0.0a14"
nonebot-adapter-onebot = ">=2.0.0b1"
Pillow = ">=8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"