[tool.poetry]
name = "nonebot_plugin_r6s"
version = "0.3.0"
description = "A R6s plugin for Nonebot2"
authors = ["abrahumlink <307887491@qq.com>"]
documentation = "https://github.com/abrahum/nonebot_plugin_r6s#readme"
license = "GPLv3"
homepage = "https://github.com/abrahum/nonebot_plugin_r6s"
readme = "README.md"
keywords = ["nonebot", "nonebot2", "r6s"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0a16"
ujson = "^4.0.2"
httpx = "^0.21.1"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"